# dbslice

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  integration-tests.yml  publish.yml
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/help/: best-practices.md
docs/user-guide/: advanced-usage.md  cli-reference.md  configuration.md
examples/: README.md
examples/configs/: basic.yaml  virtual-fks.yaml  with-anonymization.yaml
examples/scripts/: extract-subset.sh  python-api-example.py
src/dbslice/: __init__.py  __main__.py  cli.py  config.py  config_file.py  constants.py  exceptions.py  input_validators.py  logging.py  models.py  validation.py
src/dbslice/adapters/: __init__.py  base.py  postgresql.py
src/dbslice/compliance/: __init__.py  manifest.py  profiles.py  scanner.py  transformers.py
src/dbslice/core/: __init__.py  cycles.py  engine.py  graph.py  streaming.py
src/dbslice/mapping/: server.py  ui.py
src/dbslice/mapping/static/: index.html
src/dbslice/output/: __init__.py  csv_out.py  json_out.py  sql.py
src/dbslice/utils/: __init__.py  anonymizer.py  connection.py  fileio.py  profiling.py
tests/: __init__.py  conftest.py  test_anonymizer.py  test_cli_env.py  test_cli_inspect_helpers.py  test_compliance.py  test_compliance_gaps.py  test_config.py  test_config_file.py  test_connection.py  test_csv_output.py  test_cycle_fallback.py  test_cycles.py  test_graph.py  test_json_output.py  test_mapping_ui.py  test_passthrough.py  test_performance.py  test_pkless_safety.py  test_security.py  test_sql_output.py  test_streaming.py  test_streaming_integration.py  test_validation.py  test_validation_integration.py  test_validators.py  test_virtual_fks.py
tests/integration/: README.md  __init__.py  conftest.py  test_cli_integration.py  test_full_extraction.py  test_performance.py  test_pkless_safety.py  test_sql_reimport.py
